# poo2_unit5_week8_2021_0_exercise

./: CMakeLists.txt  README.md  cppcheck.cpp  global.h  main.cpp  p1.cpp  p1.h  p10.cpp  p10.h  p2.cpp  p2.h  p3.cpp  p3.h  p4.cpp  p4.h  p5.cpp  p5.h  p6.cpp  p6.h  p7.cpp  p7.h  p8.cpp  p8.h  p9.cpp  p9.h  run.sh
